# fuzzybee

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  package.json  plugin.json  pyproject.toml
.github/workflows/: deploy.yml  release.yml  test.yml
docs/: distribution-strategy.md  idempotency-audit.md
lib/: __init__.py  dashboard.py  decompose.py  engine.py  gate.py  learn.py  memory.py  recommender.py  report.py  security.py  session.py  sla.py  telemetry.py
references/: flow-skill.md  secure-code-review-integration.md  skill-integration.md
scripts/: check-secret-leaks.sh  execute.sh  install.sh  self-audit.sh
sections/: CONTEXT.md  contract.md  gates.md  integration.md  workflow.md
skills/askme/: SKILL.md
skills/dashboard/: SKILL.md
skills/decompose/: SKILL.md
skills/gate/: SKILL.md
skills/learn/: SKILL.md
skills/report/: SKILL.md
skills/setup/: SKILL.md
skills/sla/: SKILL.md
skills/verify/: SKILL.md
tests/: __init__.py  test_dashboard.py  test_decompose.py  test_engine.py  test_gate.py  test_health.bats  test_integration_v0_2.py  test_learn.py  test_memory.py  test_recommender.py  test_security.py  test_session.py  test_sla.py  test_telemetry.py
