[project]
name = "fuzzybee"
version = "0.1.0"
description = "Recursive verify skill — Reason → Act → Verify → Prove → Recurse"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "pre-commit"]
lint = ["ruff", "pre-commit"]
test = ["pytest", "pytest-cov"]
mem0 = ["mem0ai>=2.0.11"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["lib"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "except Exception:",
    "except ImportError:",
]
